Added get all users endpoint and modified user signup logic
