# src/routes/api/UserRouter.ts
@@ -1,12 +1,14 @@
-import { Router } from "express";
-import passport from "passport";
-import { CustomIRouter } from "@interfaces/routes.interface";
-import { get_get_user, post_create_user, delete_delete_user } from "@controllers/userController";
-import { authorize_user } from "@middlewares/middleware";
+import { Router } from 'express';
+import passport from 'passport';
+import { CustomIRouter } from '@interfaces/routes.interface';
+import { get_all_users, get_user, post_create_user, delete_delete_user } from '@controllers/userController';
+import { authorize_user } from '@middlewares/middleware';
 
 const userRouter: CustomIRouter = Router();
 
-userRouter.get('/userinfo', passport.authenticate('jwt', { session: false }), authorize_user, get_get_user);
+userRouter.get('/all_users', passport.authenticate('jwt', { session: false }), authorize_user, get_all_users);
+
+userRouter.get('/userinfo', passport.authenticate('jwt', { session: false }), get_user);
 
 userRouter.post('/register', post_create_user);
 
